# hide-and-seek

./: .gitignore  PROJECT_INFO.md  README.md  website-project-page.html
branches/hide-and-seek_momdp_2013/src/: CMakeLists.txt  autoplayer.h  gameconnector.cpp  gameconnector.h  hsconfig.h  hsglobaldata.cpp  hsglobaldata.h  main_hideseek.cpp  main_server.cpp  seekerhs.cpp  seekerhs.h
tags/hide-and-seek_cr-pomcp_iros2015/fafconnection/: CMakeLists.txt
tags/hide-and-seek_cr-pomcp_iros2015/src/: CMakeLists.txt  abstractautoplayer.cpp  autoplayer.cpp  autowalker.cpp  gameconnector.cpp  gameconnectorclient.cpp  gamenoserver.cpp  guiloader.cpp  guithread.cpp  hsglobaldata.cpp  main_hideseek.cpp  seekerhs.cpp  seekerhsparams.cpp
tags/hide-and-seek_cr-pomcp_multi2015_para_HASely/src/: CMakeLists.txt
trunk/: CMakeLists.txt  Findseekerhs.cmake  README.txt  XMLConfig.pro  doxygen.cfg  hsautohider.pro  hsclient.pro  hsmomdp.nodebug.pro  hsmomdp.pro  hsserver-client-communication-def.txt  hsserver.nodebug.pro  hsserver.pro  robot_params.txt  steps to compile tibi-dabo-simulator.txt  todo.txt  versions.txt
trunk/cfg/: hsclient.desktop  serverconf.xml  serverconf_debug.xml  serverconf_debug_nodb.xml  serverconf_ramdisk.xml  serverconf_ramdisk1.xml  serverconf_ramdisk4.xml  serverconf_ramdisk_rem1.xml  serverconf_ramdisk_rem2.xml  serverconf_ramdisk_rem3.xml  serverconf_ramdisk_rem4.xml  serverconf_release_nodb.xml
trunk/cmake/: FindEigen3.cmake
trunk/ext_include/appl-0.95/: SARSOP_time_log.txt  map1_9x10.n.pol  map3_9x10.simplen.pol  map6x8.n.pol  polgraph  pomdpconvert  pomdpeval  pomdpsim  pomdpsol
trunk/fafconnection/: Findfafconnection.cmake
trunk/fafconnection/include/: fafconnection.h  fafconnectionhandler.h  qtscglobal.h  qtserver.h
trunk/fafconnection/src/: fafconnection.cpp  qtclient.cpp  qtserver_main.cpp
trunk/include/AutoHider/: autohider.h  autowalker.h  fromlisthider.h  main_autohider.h  randomfixedhider.h  randomhider.h  randomwalker.h  verysmarthider.h  verysmarthider2.h
trunk/include/Base/: autoplayer.h  checkconnection.h  gameconnectorclient.h  hsconfig.h  hsglobaldata.h  playerinfo.h  playerinfoserver.h  seekerhs.h  seekerhslog.h  seekerhsparams.h
trunk/include/Filter/: hsparticlefilterchecker.h  kalmanfilter.h  particle.h  particlefilter.h  particlefilterchecker.h  particlefilterplayer.h
trunk/include/GUI/: gmapwidget.h  hsclientmainwindow.h
trunk/include/HSGame/: gmap.h  pos.h
trunk/include/POMCP/: hsobservation.h  hspomcp.h  hssimulator.h  hssimulatorcont.h  hssimulatorpred.h  mcts.h  observation.h  simulator.h  state.h
trunk/include/PathPlan/: astarplanner.h  pathplanner.h
trunk/include/Segment/: basesegmenter.h  segment.h
trunk/include/Server/: clientsocket.h  hsgamelog.h  hsgamelogdb.h  hsserverconfig.h  hstcpserver.h
trunk/include/Smart/: combinedseeker.h  follower.h  multiseekerhbexplorer.h  smartseeker.h  twoseekerhbexplorer.h
trunk/include/Solver/: hsmomdp.h  hsmomdp_runpolicy.h  hssolver.h
trunk/include/Utils/: consoleutils.h  generic.h  hsexception.h  hslog.h  normalbivardist.h  posscoremat.h  readwriteimage.h
trunk/include/XMLConfig/: xmlconfignode.h  xmlconfigparser.h
trunk/scripts/: addtopath.sh  calc_exp_rew.py  chkimport.sh  cleanGameRun.sh  copytolabrobotica.sh  cptoramdisk.sh  fixRobotLog1509.py  g++11  genactionlists.sh  gendistmat.sh  genramdisk.sh  importRobotLogToDB.py  importSARSOPLogToDB.py  loadAndShowParticles.py  mysqldump_hsgamelogdb.sh  mysqldump_hsgamelogdb_inpath.sh  qmake_all.sh  rewardCalcs.py  rosbag-record-all.sh  runReleaseServer.sh  runReleaseServerNoDB.sh  sepJoinCols.py  solverMapsToSQL.py  stopServer.sh  testRand  test_prof_Rt.sh  testpomcp1.sh  testran.cpp  yaml2textmap.sh
trunk/scripts/exp/: explog.sh  expstop.sh  expstopall.sh  gendmatfiles.sh  updramdisk.sh
trunk/scripts/stats/: mysqlBase.py  mysqlTest2.py  mysqlTest4.py  mysqlTest5.py  mysqlTest7.py  mysqlTest_multi.py  mysqlTest_newpaper201602.py  mysqlTest_oldpaper201510.py  mysqlTest_pomcp2.py  mysqlTest_pomcp2a.py  plotresults.py  plotting.py  testTablesFisher.py  testTablesFisher_orig.py
trunk/scripts/test/: checkautowalker.py
trunk/sql/: CheckDBState.sql  RenameAndMoveDb.sql  hsgamelog-constants.sql  hsgamelog-db-multisql.sql  hsgamelog-db-new-multi.sql  hsgamelog-db-new.sql  hsgamelog_140606_empty.sql  kill_unused_server_processes.sql  last-exp.sql  robotlog-db-multi-160226.sql  robotlog-db-multi-160518.sql  robotlog-db.sql  robotlog-db150225.sql
trunk/src/: CMakeLists.txt  main_hideseek.cpp  rungamethread.cpp
trunk/src/ActionListGenerator/: main_actionlistgen.cpp
trunk/src/AutoHider/: autohider.cpp  autowalker.cpp  fromlisthider.cpp  main_autohider.cpp  randomfixedhider.cpp  randomhider.cpp  randomlisthider.cpp  randomwalker.cpp  sfmwalkers.cpp  smarthider.cpp  verysmarthider.cpp  verysmarthider2.cpp
trunk/src/Base/: abstractautoplayer.cpp  autoplayer.cpp  checkconnection.cpp  gameconnectorclient.cpp  hsglobaldata.cpp  playerinfo.cpp  playerinfoserver.cpp  playerinfowrapper.cpp  posxy.cpp  seekerhs.cpp  seekerhslog.cpp  seekerhsparams.cpp
trunk/src/Filter/: hsparticlefilterchecker.cpp  kalmanfilter.cpp  kalmanfilterplayer.cpp  particle.cpp  particlefilter.cpp  particlefilterchecker.cpp  particlefilterplayer.cpp
trunk/src/GUI/: gmapwidget.cpp  hsclientmainwindow.cpp  hsclientmainwindow.ui  main_gui.cpp  popup.cpp  setparamsdialog.ui
trunk/src/HSGame/: bpos.cpp  gmap.cpp  pos.cpp
trunk/src/MemServer/: main_memserver.cpp
trunk/src/POMCP/: belief.cpp  history.cpp  hsobservation.cpp  hspomcp.cpp  hssimulator.cpp  hssimulatorcont.cpp  hssimulatorpred.cpp  hsstate.cpp  mcts.cpp  simulator.cpp  state.cpp  treewindow.ui
trunk/src/PathPlan/: astarplanner.cpp  propdistplanner.cpp
trunk/src/Segment/: basesegmenter.cpp  segment.cpp
trunk/src/Server/: clientsocket.cpp  hsgamelogdb.cpp  hsserver.cpp  hsserverconfig.cpp  hstcpserver.cpp  main_server.cpp
trunk/src/Smart/: combinedseeker.cpp  follower.cpp  highestbelieffollower.cpp  multiseekerhbexplorer.cpp  smartseeker.cpp  twoseekerhbexplorer.cpp
(+1056 files in other folders)
